Fixed menu page alignment issues

--- a/src/css/Menu.module.css
+++ b/src/css/Menu.module.css
@@ -1,10 +1,10 @@
 .Title {
     position: absolute;
-    top: 50%;
+    top: 48%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: auto;
-    height: 98vh;
+    height: 90vh;
     z-index: -1;
     border: 8px solid white;
     border-radius: 8px;
@@ -26,32 +26,33 @@
 
 .Settings {
     width: 150px;
-    left: 600px;
-    top: 10px;
+    left: 630px;
+    top: 25px;
 }
 
 .Controls {
-    width: 190px;
-    left: 775px;
-    top: -25px;
+    width: 150px;
+    left: 790px;
+    top: 25px;
 }
 
 .Inst {
     width: 160px;
-    right: 575px;
-    top: 10px;
+    height: 58px;
+    right: 620px;
+    top: 25px;
 }
 
 .Start {
     width: 100px;
     height: 60px;
-    top: 910px;
+    bottom: 95px;
     left: 650px;
 }
 
 .Resume {
     width: 160px;
-    top: 910px;
+    bottom: 95px;
     left: 760px;
 }
 
